src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ABM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account Based Marketing</inlineHelpText>
        <label>ABM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Partner__c</fullName>
        <label>Campaign Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Source_Type__c</fullName>
        <label>Campaign Source Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Global Integrated Campaigns</inlineHelpText>
        <label>GIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Territory__c</fullName>
        <label>Global Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Values__c</fullName>
        <label>Industry Values</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Healthcare/Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Back_Dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back-Dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Attribution__c</fullName>
        <label>LD LT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Bookings_Attribution__c</fullName>
        <label>LD LT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Attribution__c</fullName>
        <label>LD LT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Bookings_Attribution__c</fullName>
        <label>LD LT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Attribution__c</fullName>
        <label>LD MT Accelerated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Bookings_Attr__c</fullName>
        <label>LD MT Accelerated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Attribution__c</fullName>
        <label>LD MT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Bookings_Attribution__c</fullName>
        <label>LD MT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Average_Days_To_Close__c</fullName>
        <label>Reporting Average Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Bookings_Attribution__c</fullName>
        <label>LD MT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Campaign_Member_Totals__c</fullName>
        <label>Reporting CM Totals (Deprecated)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Cost__c</fullName>
        <label>Reporting Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Attribution_Amount__c</fullName>
        <label>LD FT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Bookings_Attribution__c</fullName>
        <label>LD FT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Lift__c</fullName>
        <label>Reporting Lift (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_MT_Attribution_Amount__c</fullName>
        <label>LD MT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Num_Target_Campaign_Members__c</fullName>
        <label>Reporting Num Target CM (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Campaign_Members__c</fullName>
        <label>Reporting Num CM (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Opportunities__c</fullName>
        <label>Reporting Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Touches__c</fullName>
        <label>Reporting Number of Touches</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_On_Target__c</fullName>
        <label>Reporting On-Target (Deprecated)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Opportunity_Close_Rate__c</fullName>
        <label>Reporting Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offer_Discipline__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>The discipline a campaign is targeted towards. Delineates between Data Science and Application Development disciplines in order to tag and then report across multiple campaign types. This field is part of the Bizible integration with Salesforce.</description>
        <inlineHelpText>The discipline a campaign is targeted towards. Delineates between Data Science or Application Development disciplines in order to tag and then report across multiple campaign types.</inlineHelpText>
        <label>Offer Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <description>Name of offer</description>
        <inlineHelpText>Name of offer</inlineHelpText>
        <label>Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Persona__c</fullName>
        <description>The persona a campaign is targeted towards.</description>
        <inlineHelpText>The persona a campaign is targeted towards.</inlineHelpText>
        <label>Offer Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C Suite</fullName>
                </value>
                <value>
                    <fullName>IT Leadership</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Sub_Type__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Sub-Type of offer (e.g. Live Demo, Connections, Conference)</description>
        <inlineHelpText>Sub-Type of offer (e.g. Live Demo, Connections, Conference)</inlineHelpText>
        <label>Offer Sub-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Type of offer (e.g. Webinar, Digital Event, Whitepaper)</description>
        <inlineHelpText>Type of offer (e.g. Webinar, Digital Event, Whitepaper)</inlineHelpText>
        <label>Offer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <label>SFDC Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Attribution_SyncType__c</fullName>
        <description>Choose which criteria to use Campaign Members as Bizible Touchpoints. This should be used for offline touchpoints only.</description>
        <inlineHelpText>Choose which criteria to use Campaign Members as Bizible Touchpoints. This should be used for offline touchpoints only.</inlineHelpText>
        <label>Enable Bizible Touchpoints</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include all Campaign Members</fullName>
                </value>
                <value>
                    <fullName>Include only &quot;Responded&quot; Campaign Members</fullName>
                </value>
                <value>
                    <fullName>Exclude all Campaign Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_End_Date__c</fullName>
        <description>The end date when Bizible should stop including Campaign Members for touchpoints</description>
        <inlineHelpText>The end date when Bizible should stop including Campaign Members for touchpoints</inlineHelpText>
        <label>Touchpoint End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Start_Date__c</fullName>
        <description>The start date when Bizible should begin to enable Campaign Members for touchpoints</description>
        <inlineHelpText>The start date when Bizible should begin to enable Campaign Members for touchpoints</inlineHelpText>
        <label>Touchpoint Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bizible2__UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used internally by Bizible help track Campaigns</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>bizible2__Update_Bizible_Attribution_Rule</fullName>
        <active>false</active>
        <description>As of version 6.0, this rule is deprecated.</description>
        <errorConditionFormula>False</errorConditionFormula>
        <errorMessage>Deprecated rule</errorMessage>
    </validationRules>
</CustomObject>